--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,14 @@
 version: '3'
 
 services:
- core:
+ serverlabs:
    restart: always
    build:
      context: .
      dockerfile: Dockerfile
+   volumes: ["./serverlabs:/opt/serverlabs"]
    environment:
-     PORT: "8080"
+     PORT: "5000"
+     FLASK_DEBUG: "true"
    ports:
-     - "8080:8080"
+     - "5000:5000"
